# Svg-To-Png

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  runDev.command  tailwind.config.js
.github/workflows/: build.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: convert.rs  lib.rs
src/components/icons/: HoverFolderIcon.tsx  HoverImageMoonIcon.tsx  WandSparkleIcon.tsx
src/components/ui/: button.tsx  card.tsx  checkbox.tsx  input.tsx  label.tsx  switch.tsx  textarea.tsx
