[package]
name = "app"
version = "0.1.0"
description = "SVG to PNG converter"
authors = ["ks10"]
license = "MIT"
repository = ""
edition = "2021"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.9.5", features = ["macos-private-api"] }
tauri-plugin-dialog = "2.4.2"
tauri-plugin-log = "2.7.1"
thiserror = "2.0.17"
walkdir = "2.5.0"
resvg = "0.45.1"


